--- a/arch/arm/configs/evervolv_hammerhead_defconfig
+++ b/arch/arm/configs/evervolv_hammerhead_defconfig
@@ -1,5 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
+CONFIG_LOCALVERSION="-evervolv"
 # CONFIG_SWAP is not set
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
@@ -553,6 +554,7 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_PERSISTENT_TRACER=y
