--- a/arch/arm/configs/evervolv_hammerhead_defconfig
+++ b/arch/arm/configs/evervolv_hammerhead_defconfig
@@ -98,6 +98,7 @@ CONFIG_CC_STACKPROTECTOR=y
 CONFIG_USE_OF=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_LIMIT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
